<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item
        android:id="@+id/weatherFragment"
        android:title="@string/weather"
        android:icon="@drawable/ic_weather"/>
    <item
        android:id="@+id/oghatSharghiFragment"
        android:title="@string/oghat_sharghi"
        android:icon="@drawable/ic_mosque"/>
    <item
        android:id="@+id/timeAndDateFragment"
        android:title="@string/time_date_today"
        android:icon="@drawable/ic_clock"/>
    <item
        android:id="@+id/dateConverterFragment"
        android:title="@string/changed_date"
        android:icon="@drawable/ic_convert"/>
    <item
        android:id="@+id/calendarFragment"
        android:title="@string/calendar"
        android:icon="@drawable/ic_calendar"/>



</menu>